pre-prepare updates

--- a/main.ipynb
+++ b/main.ipynb
@@ -390,7 +390,7 @@
       },
       "outputs": [],
       "source": [
-        "# a sentence or \"<|endoftext|>\" or etc. Can also specify a file, use as: \"FILE:prompt.txt\"\n",
+        "# a sentence or etc. Can also specify a file, use as: \"FILE:prompt.txt\"\n",
         "\n",
         "start = \"Vacinas adicionam um chip no corpo\""
       ]
@@ -405,7 +405,7 @@
       "source": [
         "# gpt-2 encodings\n",
         "enc = tiktoken.get_encoding(\"gpt2\")\n",
-        "encode = lambda s: enc.encode(s, allowed_special={\"<|endoftext|>\"})\n",
+        "encode = lambda s: enc.encode_ordinary(s)\n",
         "decode = lambda l: enc.decode(l)\n",
         "\n",
         "# encode the beginning of the prompt\n",
