--- a/main.ipynb
+++ b/main.ipynb
@@ -22,7 +22,7 @@
       "metadata": {},
       "outputs": [],
       "source": [
-        "drive_path = '/content/drive/MyDrive'"
+        "drive_path = '/content/drive'"
       ]
     },
     {
@@ -62,6 +62,19 @@
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "# copying train and val files to folder data/\n",
+        "!mkdir data/messages\n",
+        "!mkdir data/telegram\n",
+        "!cp /content/drive/.../messages/train.bin data/messages/train.bin\n",
+        "!cp /content/drive/.../messages/val.bin data/messages/val.bin"
+      ]
+    },
+    {
+      "cell_type": "code",
       "execution_count": 3,
       "metadata": {
         "id": "rhKrkYFXDBoa"
@@ -71,9 +84,9 @@
         "import os, sys\n",
         "import tempfile\n",
         "import time\n",
+        "import pickle\n",
         "\n",
         "import torch\n",
-        "import numpy as np\n",
         "\n",
         "from contextlib import nullcontext\n",
         "\n",
@@ -212,11 +225,11 @@
         "# for large dataset, we prepared a script that makes all adjustments to the standard in batches\n",
         "# download from https://drive.google.com/drive/folders/1JpPmDYhXgCGOFF1NNRj04fFqRkEIIYsQ?usp=sharing\n",
         "\n",
-        "input_file_path = 'msgs-2023-1.csv'\n",
-        "output_path = 'data/telegram'\n",
+        "# input_file_path = 'msgs-2023-1.csv'\n",
+        "# output_path = 'data/telegram'\n",
         "\n",
-        "sys.argv = ['prepare', input_file_path, output_path]\n",
-        "exec(open('data/telegram/prepare.py').read())"
+        "# sys.argv = ['prepare', input_file_path, output_path]\n",
+        "# exec(open('data/telegram/prepare.py').read())"
       ]
     },
     {
@@ -281,7 +294,7 @@
       "source": [
         "import shutil\n",
         "\n",
-        "zip_name = drive_path + 'out_dir_' + time.strftime(\"%Y%m%d-%H%M%S\")\n",
+        "zip_name = os.path.join(drive_path, 'out_dir_' + time.strftime(\"%Y%m%d-%H%M%S\"))\n",
         "shutil.make_archive(zip_name, 'zip', out_dir)"
       ]
     },
@@ -304,7 +317,7 @@
       "source": [
         "import shutil\n",
         "\n",
-        "zip_name = drive_path + 'out_dir_20231201-123456.zip'\n",
+        "zip_name = os.path.join(drive_path, 'out_dir_20231201-123456.zip')\n",
         "out_dir = 'out'\n",
         "\n",
         "# unpacking the outdir from previous finetunnings\n",
@@ -327,7 +340,7 @@
         "init_from = 'resume' # reither 'resume' (from an out_dir) or a gpt2 variant (e.g. 'gpt2', 'gpt2-medium', 'gpt2-large', 'gpt2-xl')\n",
         "out_dir = 'out' # ignored if init_from is not 'resume'\n",
         "num_samples = 10 # number of samples to draw\n",
-        "max_new_tokens = 100 # number of tokens generated in each sample\n",
+        "max_new_tokens = 280 # number of tokens generated in each sample\n",
         "temperature = 0.8 # 1.0 = no change, < 1.0 = less random, > 1.0 = more random, in predictions\n",
         "top_k = 200 # retain only the top_k most likely tokens, clamp others to have 0 probability\n",
         "seed = 1337\n",
@@ -380,6 +393,28 @@
         "elif init_from.startswith('gpt2'):\n",
         "    # init from a given GPT-2 model\n",
         "    model = GPT.from_pretrained(init_from, dict(dropout=0.0))"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "pikle_model_name = os.path.join(drive_path, time.strftime(\"%Y%m%d-%H%M%S\") + '.pickle')\n",
+        "\n",
+        "with open(pikle_model_name, \"wb\") as fp:\n",
+        "    pickle.dump({\n",
+        "        'model': model,\n",
+        "        'device': device,\n",
+        "        'ctx': ctx,\n",
+        "        'num_samples': num_samples,\n",
+        "        'max_new_tokens': max_new_tokens,\n",
+        "        'temperature': temperature,\n",
+        "        'top_k': top_k\n",
+        "    }, fp, pickle.HIGHEST_PROTOCOL)\n",
+        "\n",
+        "print(pikle_model_name)"
       ]
     },
     {
